--- a/package.json
+++ b/package.json
@@ -1,7 +1,12 @@
 {
   "name": "smtapp",
-  "version": "1.1.1",
-  "description": "smtApp: An Ionic project",
+  "version": "1.0.0",
+  "description": "Ionic Mobile App for Inventory Management Tool (Coursera MEAN Stack Certification Capstone Project)",
+  "author": "Daniel García Jones <danielgj@gmail.com>",
+  "repository": {
+      "type": "git",
+      "url": "https://github.com/danielgj/imt-ionic-app"
+  },
   "dependencies": {
     "gulp": "^3.5.6",
     "gulp-sass": "^2.0.4",
