--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "smtapp",
+  "name": "IMT",
   "version": "1.1.1",
-  "description": "smtApp: An Ionic project",
+  "description": "IMT App. Ionic app developed for Coursera's Capstone Project",
   "dependencies": {
     "gulp": "^3.5.6",
     "gulp-sass": "^2.0.4",
